# so-challenge

./: README.md  pyproject.toml
diary/: 001-project-setup.md  002-requirements-specification.md  003-write-tests-for-data-fetcher.md  004-implement-data-fetcher-module.md  005-write-tests-for-plotter-module.md  006-implement-plotter-module.md
docs/: requirements.md
src/so_challenge/: __init__.py  data_fetcher.py  milestones.py  plotter.py
tests/: test_data_fetcher.py  test_milestones.py  test_plotter.py
